--- a/src/site/antora/modules/ROOT/partials/components/log4j-config-jackson.adoc
+++ b/src/site/antora/modules/ROOT/partials/components/log4j-config-jackson.adoc
@@ -21,12 +21,11 @@ Maven::
 +
 We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
-[source,xml,subs="+attributes"]
+[source,xml]
 ----
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-jctools</artifactId>
-  <scope>runtime</scope>
+  <artifactId>log4j-config-jackson</artifactId>
 </dependency>
 ----
 
@@ -34,8 +33,8 @@ Gradle::
 +
 We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
-[source,groovy,subs="+attributes"]
+[source,groovy]
 ----
-runtimeOnly 'org.apache.logging.log4j:log4j-jctools'
+api 'org.apache.logging.log4j:log4j-config-jackson'
 ----
 ====
