--- a/src/site/antora/modules/ROOT/partials/components/log4j-config-properties.adoc
+++ b/src/site/antora/modules/ROOT/partials/components/log4j-config-properties.adoc
@@ -19,23 +19,23 @@
 ====
 Maven::
 +
-We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
+We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
-[source,xml,subs="+attributes"]
+[source,xml]
 ----
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-jpa</artifactId>
+  <artifactId>log4j-config-properties</artifactId>
   <scope>runtime</scope>
 </dependency>
 ----
 
 Gradle::
 +
-We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
+We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
-[source,groovy,subs="+attributes"]
+[source,groovy]
 ----
-runtimeOnly 'org.apache.logging.log4j:log4j-jpa'
+runtimeOnly 'org.apache.logging.log4j:log4j-config-properties'
 ----
 ====
