--- a/src/site/antora/modules/ROOT/partials/components/log4j-core-test.adoc
+++ b/src/site/antora/modules/ROOT/partials/components/log4j-core-test.adoc
@@ -19,9 +19,9 @@
 ====
 Maven::
 +
-We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
+We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
-[source,xml,subs="+attributes"]
+[source,xml]
 ----
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
@@ -32,9 +32,9 @@ We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency mana
 
 Gradle::
 +
-We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
+We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
 +
-[source,groovy,subs="+attributes"]
+[source,groovy]
 ----
 runtimeOnly 'org.apache.logging.log4j:log4j-core-test'
 ----
