--- a/src/site/antora/modules/ROOT/partials/components/log4j-kit.adoc
+++ b/src/site/antora/modules/ROOT/partials/components/log4j-kit.adoc
@@ -25,7 +25,7 @@ We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency man
 ----
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-docker</artifactId>
+  <artifactId>log4j-kit</artifactId>
   <scope>runtime</scope>
 </dependency>
 ----
@@ -36,6 +36,6 @@ We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency man
 +
 [source,groovy]
 ----
-runtimeOnly 'org.apache.logging.log4j:log4j-docker'
+runtimeOnly 'org.apache.logging.log4j:log4j-kit'
 ----
 ====
