--- a/src/site/antora/modules/ROOT/partials/features/appender-smtp.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/appender-smtp.adoc
@@ -15,27 +15,27 @@
     limitations under the License.
 ////
 
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable the SMTP appender.
+
 [tabs]
 ====
 Maven::
 +
-We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,xml,subs="+attributes"]
+[source,xml,subs=+attributes]
 ----
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-cassandra</artifactId>
+  <artifactId>log4j-jakarta-smtp</artifactId>
+  <version>{log4j-jakarta-version}</version>
   <scope>runtime</scope>
 </dependency>
 ----
 
 Gradle::
 +
-We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,groovy,subs="+attributes"]
+[source,groovy,subs=+attributes]
 ----
-runtimeOnly 'org.apache.logging.log4j:log4j-cassandra'
+runtimeOnly 'org.apache.logging.log4j:log4j-jakarta-smtp:{log4j-jakarta-version}'
 ----
 ====
