--- a/src/site/antora/modules/ROOT/partials/features/async-logger.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/async-logger.adoc
@@ -15,27 +15,7 @@
     limitations under the License.
 ////
 
-[tabs]
-====
-Maven::
-+
-We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,xml,subs="+attributes"]
-----
-<dependency>
-  <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-couchdb</artifactId>
-  <scope>runtime</scope>
-</dependency>
-----
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable Asynchronous Loggers.
 
-Gradle::
-+
-We assume you use xref:artifacts.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,groovy,subs="+attributes"]
-----
-runtimeOnly 'org.apache.logging.log4j:log4j-couchdb'
-----
-====
+include::partial$components/log4j-async-logger.adoc[]
