--- a/src/site/antora/modules/ROOT/partials/features/config-properties.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/config-properties.adoc
@@ -15,27 +15,7 @@
     limitations under the License.
 ////
 
-[tabs]
-====
-Maven::
-+
-We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,xml]
-----
-<dependency>
-  <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-1.2-api</artifactId>
-  <scope>runtime</scope>
-</dependency>
-----
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable Java properties configuration.
 
-Gradle::
-+
-We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,groovy]
-----
-runtimeOnly 'org.apache.logging.log4j:log4j-1.2-api'
-----
-====
+include::partial$components/log4j-config-properties.adoc[]
