--- a/src/site/antora/modules/ROOT/partials/features/config-xml.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/config-xml.adoc
@@ -15,27 +15,16 @@
     limitations under the License.
 ////
 
-[tabs]
-====
-Maven::
-+
-We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,xml]
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable XML configuration.
+
+JPMS users need to add:
+
+[source,java]
 ----
-<dependency>
-  <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-docker</artifactId>
-  <scope>runtime</scope>
-</dependency>
+module foo.bar {
+    requires java.xml;
+}
 ----
 
-Gradle::
-+
-We assume you use xref:components.adoc#log4j-bom[`log4j-bom`] for dependency management.
-+
-[source,groovy]
-----
-runtimeOnly 'org.apache.logging.log4j:log4j-docker'
-----
-====
+to their `module-info.java` descriptor.
