--- a/src/site/antora/modules/ROOT/partials/features/config-yaml.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/config-yaml.adoc
@@ -15,25 +15,7 @@
     limitations under the License.
 ////
 
-[tabs]
-====
-Maven::
-+
-[source,xml]
-----
-<!-- We assume you use `log4j-bom` for dependency management -->
-<dependency>
-  <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-jndi</artifactId>
-  <scope>runtime</scope>
-</dependency>
-----
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable YAML configuration.
 
-Gradle::
-+
-[source,groovy,subs=+attributes]
-----
-// We assume you use `log4j-bom` for dependency management
-runtimeOnly 'org.apache.logging.log4j:log4j-jndi'
-----
-====
+include::partial$components/log4j-config-yaml.adoc[]
