--- a/src/site/antora/modules/ROOT/partials/features/servlet-support.adoc
+++ b/src/site/antora/modules/ROOT/partials/features/servlet-support.adoc
@@ -15,27 +15,27 @@
     limitations under the License.
 ////
 
-// This file contains the dependencies required to enable Asynchronous Loggers.
+// This file exists in both the 2.x and 3.x branches.
+// It contains the dependencies required to enable Servlet environment support.
 
 [tabs]
 ====
 Maven::
 +
-[source,xml]
+[source,xml,subs="+attributes"]
 ----
-<!-- We assume you use `log4j-bom` for dependency management -->
 <dependency>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-async-logger</artifactId>
+  <artifactId>log4j-jakarta-web</artifactId>
+  <version>{log4j-jakarta-version}</version>
   <scope>runtime</scope>
 </dependency>
 ----
 
 Gradle::
 +
-[source,groovy]
+[source,groovy,subs="+attributes"]
 ----
-// We assume you use `log4j-bom` for dependency management
-runtimeOnly 'org.apache.logging.log4j:log4j-async-logger'
+runtimeOnly 'org.apache.logging.log4j:log4j-jakarta-web:{log4j-jakarta-version}'
 ----
 ====
